fix popover v slider v modal z-index issue

--- a/src/styles/vue-slider-component.css
+++ b/src/styles/vue-slider-component.css
@@ -1,3 +1,7 @@
+.vue-slider {
+  z-index: 0;
+}
+
 /* component style */
 .vue-slider-disabled {
   opacity: 0.5;
